fix: filter added css overflow: auto

--- a/components/Admin/AdminDashboard/AdminDashboard.module.scss
+++ b/components/Admin/AdminDashboard/AdminDashboard.module.scss
@@ -280,6 +280,6 @@
   white-space: nowrap;
 }
 
-#devices-select {
+.filterSelect {
   overflow: auto;
 }
